--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -647,3 +647,12 @@
   url       = {https://dl.acm.org/doi/10.1145/3383455.3422540},
   year      = {2020}
 }
+@inbook{Molnar2025,
+   abstract = {Machine learning is part of our products, processes, and research. But computers usually don’t explain their predictions, which can cause many problems, ranging from trust issues to undetected bugs. This book is about making machine learning models and their decisions interpretable. After exploring the concepts of interpretability, you will learn about simple, interpretable models such as decision trees and linear regression. The focus of the book is on model-agnostic methods for interpreting black box models. Some model-agnostic methods like LIME and Shapley values can be used to explain individual predictions, while other methods like permutation feature importance and accumulated local effects can be used to get insights about the more general relations between features and predictions. In addition, the book presents methods specific to deep neural networks. All interpretation methods are explained in depth and discussed critically. How do they work? What are their strengths and weaknesses? How do you interpret them? This book will enable you to select and correctly apply the interpretation method that is most suitable for your machine learning application. Reading the book is recommended for machine learning practitioners, data scientists, statisticians, and anyone else interested in making machine learning models interpretable.},
+   author = {Christoph Molnar},
+   edition = {3},
+   booktitle = {Interpretable Machine Learning},
+   title = {LIME},
+   url = {https://christophm.github.io/interpretable-ml-book/},
+   year = {2025}
+}
