--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -353,4 +353,4 @@ The method works as follows:
     \item \textbf{Explanation}: Use the surrogate model to explain the original prediction by interpreting its coefficients or structure.
 \end{itemize}
 
-Its main advantages are its ability to work across different types of data and models, due to its model-agnostic nature, and its explanations are human-friendly and include a fidelity measure that indicates how well the explanation approximates the black-box model's local behaviour. Nonetheless, the method offers only local explanations, which may not generalise well to the entire model; it relies on the choice of neighbourhood; and the complexity of the surrogate model needs to be defined in advance and can compromise the interpretability of the explanation.
+Its main advantages are its ability to work across different types of data and models, due to its model-agnostic nature, and its explanations are human-friendly and include a fidelity measure that indicates how well the explanation approximates the black-box model's local behaviour. Nonetheless, the method offers only local explanations, which may not generalise well to the entire model; it relies on the choice of neighbourhood; and the complexity of the surrogate model needs to be defined in advance and can compromise the interpretability of the explanation \cite{Molnar2025}.
