--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -389,6 +389,17 @@
   url       = {https://arxiv.org/abs/1602.01783v2},
   year      = {2016}
 }
+@inbook{Molnar2025,
+  abstract  = {Machine learning is part of our products, processes, and research. But computers usually don’t explain their predictions, which can cause many problems, ranging from trust issues to undetected bugs. This book is about making machine learning models and their decisions interpretable. After exploring the concepts of interpretability, you will learn about simple, interpretable models such as decision trees and linear regression. The focus of the book is on model-agnostic methods for interpreting black box models. Some model-agnostic methods like LIME and Shapley values can be used to explain individual predictions, while other methods like permutation feature importance and accumulated local effects can be used to get insights about the more general relations between features and predictions. In addition, the book presents methods specific to deep neural networks. All interpretation methods are explained in depth and discussed critically. How do they work? What are their strengths and weaknesses? How do you interpret them? This book will enable you to select and correctly apply the interpretation method that is most suitable for your machine learning application. Reading the book is recommended for machine learning practitioners, data scientists, statisticians, and anyone else interested in making machine learning models interpretable.},
+  author    = {Christoph Molnar},
+  edition   = {3},
+  booktitle = {Interpretable Machine Learning},
+  title     = {LIME},
+  url       = {https://christophm.github.io/interpretable-ml-book/},
+  year      = {2025},
+  chapter   = {14},
+  publisher = {Christoph Molnar}
+}
 @article{Moody2001,
   abstract = {We present methods for optimizing portfolios, asset allocations, and trading systems based on direct reinforcement (DR). In this approach, investment decision making is viewed as a stochastic control problem, and strategies are discovered directly. We present an adaptive algorithm called recurrent reinforcement learning (RRL) for discovering investment policies. The need to build forecasting models is eliminated, and better trading performance is obtained. The direct reinforcement approach differs from dynamic programming and reinforcement algorithms such as TD-learning and Q-learning, which attempt to estimate a value function for the control problem. We find that the RRL direct reinforcement framework enables a simpler problem representation, avoids Bellman's curse of dimensionality and offers compelling advantages in efficiency. We demonstrate how direct reinforcement can be used to optimize risk-adjusted investment returns (including the differential Sharpe ratio), while accounting for the effects of transaction costs. In extensive simulation work using real financial data, we find that our approach based on RRL produces better trading strategies than systems utilizing Q-Learning (a value function method). Real-world applications include an intra-daily currency trader and a monthly asset allocation system for the S&P 500 Stock Index and T-Bills.},
   author   = {John Moody and Matthew Saffell},
@@ -646,13 +657,4 @@
   title     = {Deep reinforcement learning for automated stock trading: An ensemble strategy},
   url       = {https://dl.acm.org/doi/10.1145/3383455.3422540},
   year      = {2020}
-}
-@inbook{Molnar2025,
-   abstract = {Machine learning is part of our products, processes, and research. But computers usually don’t explain their predictions, which can cause many problems, ranging from trust issues to undetected bugs. This book is about making machine learning models and their decisions interpretable. After exploring the concepts of interpretability, you will learn about simple, interpretable models such as decision trees and linear regression. The focus of the book is on model-agnostic methods for interpreting black box models. Some model-agnostic methods like LIME and Shapley values can be used to explain individual predictions, while other methods like permutation feature importance and accumulated local effects can be used to get insights about the more general relations between features and predictions. In addition, the book presents methods specific to deep neural networks. All interpretation methods are explained in depth and discussed critically. How do they work? What are their strengths and weaknesses? How do you interpret them? This book will enable you to select and correctly apply the interpretation method that is most suitable for your machine learning application. Reading the book is recommended for machine learning practitioners, data scientists, statisticians, and anyone else interested in making machine learning models interpretable.},
-   author = {Christoph Molnar},
-   edition = {3},
-   booktitle = {Interpretable Machine Learning},
-   title = {LIME},
-   url = {https://christophm.github.io/interpretable-ml-book/},
-   year = {2025}
 }
