Add Shapley values

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -528,6 +528,15 @@
   year     = {2019},
   journal  = {arXiv preprint arXiv:1912.10944}
 }
+@inbook{Shapley1953,
+  author    = {Lloyd Shapley},
+  isbn      = {9781400881970},
+  booktitle = {Contributions to the Theory of Games},
+  pages     = {307-317},
+  publisher = {Princeton University Press},
+  title     = {A value for n-person games},
+  year      = {1953}
+}
 @article{Shen2020,
   abstract  = {In the era of big data, deep learning for predicting stock market prices and trends has become even more popular than before. We collected 2 years of data from Chinese stock market and proposed a comprehensive customization of feature engineering and deep learning-based model for predicting price trend of stock markets. The proposed solution is comprehensive as it includes pre-processing of the stock market dataset, utilization of multiple feature engineering techniques, combined with a customized deep learning based system for stock market price trend prediction. We conducted comprehensive evaluations on frequently used machine learning models and conclude that our proposed solution outperforms due to the comprehensive feature engineering that we built. The system achieves overall high accuracy for stock market trend prediction. With the detailed design and evaluation of prediction term lengths, feature engineering, and data pre-processing methods, this work contributes to the stock analysis research community both in the financial and technical domains.},
   author    = {Jingyi Shen and M. Omair Shafiq},
@@ -600,6 +609,22 @@
   title       = {Efficient Exploration In Reinforcement Learning},
   url         = {https://www.ri.cmu.edu/publications/efficient-exploration-in-reinforcement-learning/},
   year        = {1992}
+}
+@article{Strumbelj2011,
+  abstract  = {We propose a method for explaining regression models and their predictions for individual instances. The method successfully reveals how individual features influence the model and can be used with any type of regression model in a uniform way. We used different...},
+  author    = {Erik Štrumbelj and Igor Kononenko},
+  doi       = {10.1007/978-3-642-20267-4_3},
+  isbn      = {978-3-642-20267-4},
+  issn      = {1611-3349},
+  issue     = {PART 2},
+  journal   = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+  keywords  = {Neural networks,SVM,prediction,transparency},
+  pages     = {21-30},
+  publisher = {Springer, Berlin, Heidelberg},
+  title     = {A General Method for Visualizing and Explaining Black-Box Regression Models},
+  volume    = {6594 LNCS},
+  url       = {https://link.springer.com/chapter/10.1007/978-3-642-20267-4_3},
+  year      = {2011}
 }
 @article{Uhlenbeck1930,
   abstract  = {With a method first indicated by Ornstein the mean values of all the powers of the velocity u and the displacement s of a free particle in Brownian motion are calculated. It is shown that u-u0exp(-βt) and s-u0β[1-exp(-βt)] where u0 is the initial velocity and β the friction coefficient divided by the mass of the particle, follow the normal Gaussian distribution law. For s this gives the exact frequency distribution corresponding to the exact formula for s2 of Ornstein and Fürth. Discussion is given of the connection with the Fokker-Planck partial differential equation. By the same method exact expressions are obtained for the square of the deviation of a harmonically bound particle in Brownian motion as a function of the time and the initial deviation. Here the periodic, aperiodic and overdamped cases have to be treated separately. In the last case, when β is much larger than the frequency and for values of tβ-1, the formula takes the form of that previously given by Smoluchowski. © 1930 The American Physical Society.},
