Rename appendinx chapter

--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -1,4 +1,4 @@
-\chapter{DRL Algorithms} \label{ch:drl_algorithms}
+\chapter{DRL Algorithms} \label{app:drl_algorithms}
 
 \begin{algorithm}
 \label{alg:a2c}
