Fix boldsymbol use for greek letters

--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -27,9 +27,9 @@ with $\mathbf{1} \in \mathbb{R}^N$ being a vector of ones, and subject to the no
     w_i \geq 0 \quad \forall i = 1, 2, \dots, N.
 \end{equation}
 
-Let $\boldsymbol{\mu} = \left(R_1, R_2, \dots, R_N\right)^T$ represent the vector of expected returns, and $\Sigma \in \mathbb{R}^{N \times N}$ the covariance matrix of asset returns. The expected return of the portfolio is then given by:
+Let $\bm{\mu} = \left(R_1, R_2, \dots, R_N\right)^T$ represent the vector of expected returns, and $\Sigma \in \mathbb{R}^{N \times N}$ the covariance matrix of asset returns. The expected return of the portfolio is then given by:
 \begin{equation}
-    R_p = \mathbf{w}^T \boldsymbol{\mu},
+    R_p = \mathbf{w}^T \bm{\mu},
 \end{equation}
 and the portfolio risk is quantified by the variance of returns:
 \begin{equation}
