Add MDP methodology

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -21,6 +21,7 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{bm}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
@@ -124,5 +125,6 @@
 %%%%%% Appendices
 \appendix
 \include{appendix/drl_algorithms}
+\include{appendix/state_representation}
 
 \end{document}
