--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -362,6 +362,16 @@
   url       = {https://journalofbigdata.springeropen.com/articles/10.1186/s40537-020-00299-5},
   year      = {2020}
 }
+@article{Raffin2021,
+  author  = {Antonin Raffin and Ashley Hill and Adam Gleave and Anssi Kanervisto and Maximilian Ernestus and Noah Dormann},
+  issue   = {268},
+  journal = {Journal of Machine Learning Research},
+  pages   = {1-8},
+  title   = {Stable-Baselines3: Reliable Reinforcement Learning Implementations},
+  volume  = {22},
+  url     = {http://jmlr.org/papers/v22/20-1364.html},
+  year    = {2021}
+}
 @article{Sato2019,
   abstract = {Financial portfolio management is one of the problems that are most frequently encountered in the investment industry. Nevertheless, it is not widely recognized that both Kelly Criterion and Risk Parity collapse into Mean Variance under some conditions, which implies that a universal solution to the portfolio optimization problem could potentially exist. In fact, the process of sequential computation of optimal component weights that maximize the portfolio's expected return subject to a certain risk budget can be reformulated as a discrete-time Markov Decision Process (MDP) and hence as a stochastic optimal control, where the system being controlled is a portfolio consisting of multiple investment components, and the control is its component weights. Consequently, the problem could be solved using model-free Reinforcement Learning (RL) without knowing specific component dynamics. By examining existing methods of both value-based and policy-based model-free RL for the portfolio optimization problem, we identify some of the key unresolved questions and difficulties facing today's portfolio managers of applying model-free RL to their investment portfolios.},
   author   = {Yoshiharu Sato},
@@ -403,6 +413,14 @@
   url      = {https://arxiv.org/abs/1912.10944v2},
   year     = {2019},
   journal  = {arXiv preprint arXiv:1912.10944}
+}
+@article{Sharpe1994,
+  author  = {William Sharpe},
+  journal = {The Journal of Portfolio Management},
+  title   = {The Sharpe Ratio},
+  volume  = {Fall},
+  url     = {https://web.stanford.edu/~wfsharpe/art/sr/sr.htm},
+  year    = {1994}
 }
 @article{Shen2020,
   abstract  = {In the era of big data, deep learning for predicting stock market prices and trends has become even more popular than before. We collected 2 years of data from Chinese stock market and proposed a comprehensive customization of feature engineering and deep learning-based model for predicting price trend of stock markets. The proposed solution is comprehensive as it includes pre-processing of the stock market dataset, utilization of multiple feature engineering techniques, combined with a customized deep learning based system for stock market price trend prediction. We conducted comprehensive evaluations on frequently used machine learning models and conclude that our proposed solution outperforms due to the comprehensive feature engineering that we built. The system achieves overall high accuracy for stock market trend prediction. With the detailed design and evaluation of prediction term lengths, feature engineering, and data pre-processing methods, this work contributes to the stock analysis research community both in the financial and technical domains.},
